# Adafruit_CircuitPython_AdafruitIO

./: .pylintrc  .travis.yml  README.rst  adafruit_io.py  optional_requirements.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml
adafruit_io/: adafruit_io.py  adafruit_io_errors.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: adafruit_io_mqtt_weather.py  adafruit_io_simpletest.py  adafruit_io_simpletest_analog_in.py  adafruit_io_simpletest_api.py  adafruit_io_simpletest_data.py  adafruit_io_simpletest_digital_out.py  adafruit_io_simpletest_esp_at.py  adafruit_io_simpletest_feeds.py  adafruit_io_simpletest_groups.py  adafruit_io_simpletest_location.py  adafruit_io_simpletest_metadata.py  adafruit_io_simpletest_randomizer.py  adafruit_io_simpletest_temperature.py  adafruit_io_simpletest_weather.py
examples/adafruit_io_http/: adafruit_io_air_quality.py  adafruit_io_air_quality_create_delete_cpython.py  adafruit_io_analog_in.py  adafruit_io_batch_cpython.py  adafruit_io_create_and_get_feed.py  adafruit_io_digital_out.py  adafruit_io_esp_at.py  adafruit_io_feeds.py  adafruit_io_groups.py  adafruit_io_metadata.py  adafruit_io_randomizer.py  adafruit_io_simpletest.py  adafruit_io_simpletest_cpython.py  adafruit_io_simpletest_esp32spi.py  adafruit_io_simpletest_wifi.py  adafruit_io_temperature.py  adafruit_io_user_info.py  adafruit_io_weather.py  adafruit_io_weather_create_delete_cpython.py
examples/adafruit_io_mqtt/: adafruit_io_air_quality.py  adafruit_io_air_quality_cpython.py  adafruit_io_feed_callback.py  (+8 more)
(+21 files in other folders)
